Add Ansible playbooks for GitHub Runner setup
Introduced Ansible configurations to manage a GitHub Runner environment. This includes roles and tasks for installing dependencies, Docker, and configuring the runner. Updated `.gitignore`, added a pre-commit config, and defined an inventory for Raspberry Pi runners.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,3 +5,13 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.8"
 dependencies = []
+
+[dependency-groups]
+dev = [
+    "ansible-lint>=6.8.7",
+    "pre-commit>=3.5.0",
+]
+
+[tool.ansible-lint]
+warn_list = ["experimental"]
+skip_list = ["role-name", "no-changed-when"]
