Add Oh My Zsh installation and configuration
This commit introduces tasks to install and configure Oh My Zsh for GitHub runners. It includes adding Zsh as a dependency, installing Oh My Zsh, setting up useful plugins like autosuggestions and syntax highlighting, and configuring Zsh as the default shell for users.

--- a/roles/github_runner/tasks/setup/main.yml
+++ b/roles/github_runner/tasks/setup/main.yml
@@ -1,3 +1,4 @@
 - import_tasks: install_dependencies.yml
 - import_tasks: install_docker.yml
 - import_tasks: install_github_runner.yml
+- import_tasks: install_oh_my_zsh.yml
