--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,12 +4,22 @@ version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.8"
+dependencies = [
+    "dotenv>=0.9.9",
+    "requests>=2.32.3",
+    "typer>=0.15.2",
+]
+
+[tool.pytest.ini_options]
+pythonpath = "."
+
 dependencies = []
 
 [dependency-groups]
 dev = [
     "ansible-lint>=6.8.7",
     "pre-commit>=3.5.0",
+    "pytest>=8.3.5",
 ]
 
 [tool.ansible-lint]
