--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,5 +1,8 @@
 repos:
   - repo: https://github.com/ansible/ansible-lint
-    rev: v6.21.0  # Use the latest stable version
+    rev: v6.21.0
     hooks:
       - id: ansible-lint
+        args:
+          - --skip-list=name[template],yaml[line-length]
+          - --fix
