--- a/roles/github_runner/tasks/setup/install_docker.yml
+++ b/roles/github_runner/tasks/setup/install_docker.yml
@@ -1,7 +1,7 @@
 ---
 - name: Update package lists
   ansible.builtin.apt:
-    update_cache: yes
+    update_cache: true
 
 - name: Install prerequisites for Docker
   ansible.builtin.apt:
@@ -11,28 +11,37 @@
     state: present
 
 - name: Create directory for Docker GPG key
-  file:
+  ansible.builtin.file:
     path: /etc/apt/keyrings
     state: directory
     mode: "0755"
 
 - name: Download Docker GPG key
-  get_url:
+  ansible.builtin.get_url:
     url: https://download.docker.com/linux/ubuntu/gpg
     dest: /etc/apt/keyrings/docker.asc
     mode: "0644"
 
 - name: Add Docker repository if not already present
-  shell: |
+  ansible.builtin.shell: |
     if ! grep -q "download.docker.com" /etc/apt/sources.list.d/docker.list; then
-      echo "deb [arch=$(dpkg --print-architecture) signed-by=/etc/apt/keyrings/docker.asc] https://download.docker.com/linux/ubuntu $(. /etc/os-release && echo "$VERSION_CODENAME") stable" > /etc/apt/sources.list.d/docker.list
+      ARCH=$(dpkg --print-architecture)
+      VERSION_CODENAME=$(. /etc/os-release && echo "$VERSION_CODENAME")
+      echo "deb [arch=${ARCH} signed-by=/etc/apt/keyrings/docker.asc] \
+        https://download.docker.com/linux/ubuntu ${VERSION_CODENAME} stable" \
+        > /etc/apt/sources.list.d/docker.list
+      echo "changed"
+    else
+      echo "unchanged"
     fi
   args:
     executable: /bin/bash
+  register: docker_repo_result
+  changed_when: docker_repo_result.stdout == "changed"
 
 - name: Update package lists after adding Docker repo
   ansible.builtin.apt:
-    update_cache: yes
+    update_cache: true
 
 - name: Install Docker CE
   ansible.builtin.apt:
