--- a/roles/github_runner/tasks/setup/install_github_runner.yml
+++ b/roles/github_runner/tasks/setup/install_github_runner.yml
@@ -1,28 +1,31 @@
+---
 - name: Create main runner directory
-  file:
+  ansible.builtin.file:
     path: "{{ base_directory }}"
     state: directory
-    owner: github
-    group: github
-    mode: '0755'
+    owner: "{{ ansible_user }}"
+    group: "{{ ansible_user }}"
+    mode: "0755"
 
-- name: Download GitHub runner tar once per host
-  shell: |
-    curl -o actions-runner-linux-{{ runner_architecture }}-{{ github_runner_version }}.tar.gz \
-         -L https://github.com/actions/runner/releases/download/v{{ github_runner_version }}/actions-runner-linux-{{ runner_architecture }}-{{ github_runner_version }}.tar.gz
-  args:
-    chdir: '{{ base_directory }}'
-    creates: '{{ base_directory }}/actions-runner-linux-{{ runner_architecture }}-{{ github_runner_version }}.tar.gz'
-
-- name: Validate runner archive
-  shell: echo "{{ github_runner_hash }} actions-runner-linux-{{ runner_architecture }}-{{ github_runner_version }}.tar.gz" | sha256sum --check
-  args:
-    chdir: '{{ base_directory }}'
-  register: hash_check
-  failed_when: "'OK' not in hash_check.stdout"
+- name: Download GitHub runner
+  ansible.builtin.get_url:
+    url: "https://github.com/actions/runner/releases/download/v{{ github_runner_version }}/actions-runner-linux-{{ runner_architecture }}-{{ github_runner_version }}.tar.gz"
+    dest: "{{ base_directory }}/actions-runner-linux-{{ runner_architecture }}-{{ github_runner_version }}.tar.gz"
+    checksum: "sha256:{{ github_runner_hash }}"
+    mode: "0644"
+    owner: "{{ ansible_user }}"
+    group: "{{ ansible_user }}"
 
 - name: Extract GitHub runner binaries
-  shell: tar xzf actions-runner-linux-{{ runner_architecture }}-{{ github_runner_version }}.tar.gz
-  args:
-    chdir: '{{ base_directory }}'
-    creates: '{{ base_directory }}/run.sh'
+  ansible.builtin.unarchive:
+    src: "{{ base_directory }}/actions-runner-linux-{{ runner_architecture }}-{{ github_runner_version }}.tar.gz"
+    dest: "{{ base_directory }}"
+    remote_src: true
+    creates: "{{ base_directory }}/run.sh"
+    owner: "{{ ansible_user }}"
+    group: "{{ ansible_user }}"
+
+- name: Remove GitHub runner tar.gz file
+  ansible.builtin.file:
+    path: "{{ base_directory }}/actions-runner-linux-{{ runner_architecture }}-{{ github_runner_version }}.tar.gz"
+    state: absent
