--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.8"
 dependencies = [
+    "ansible>=6.7.0",
     "dotenv>=0.9.9",
     "requests>=2.32.3",
     "typer>=0.15.2",
